# AIPY-VN

./: .codegraphignore  .commit_msg4.txt  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  PROJECT_ANALYSIS.md  README.md  ROADMAP.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/api-server/: .env.example  Dockerfile  README-NO-ENV.md  alembic.ini  pyproject.toml  run-dev-server.ps1  run-tests.ps1  run-with-env.ps1  seed_test_data.py
apps/api-server/alembic/: env.py
apps/api-server/alembic/versions/: 61c6f0be4b51_add_messages_and_reviews_tables.py  a6f8c5ce8bce_initial_migration_create_all_tables.py  add_promotions_and_reports.py  b7b6f4a26109_add_favorites_table.py  b8f3d2e1c4a5_add_database_indexes.py  postgis_spatial_add_postgis_spatial_schema.py  postgis_spatial_add_postgis_spatial_schema.py.disabled
apps/api-server/docs/: DATA_IMPORT_GUIDE.md  POSTGIS_IMPLEMENTATION_SUMMARY.md  POSTGIS_PHASE2_SUMMARY.md  POSTGIS_PHASE3_SUMMARY.md  POSTGIS_SETUP.md  REDIS_CACHING_GUIDE.md
apps/api-server/scripts/: import_data.py  setup_postgis.py
apps/api-server/src/: cache.py  celery_app.py  config.py  database.py  db.py  embeddings.py  main.py  seed.py  sentry_config.py  vector_db.py  verify_db.py
apps/api-server/src/agents/: __init__.py  shopping_agent.py
apps/api-server/src/api/: __init__.py  admin.py  advanced_search_api.py  auth.py  cart.py  categories.py  chat.py  favorites.py  geo.py  notifications.py  notifications_api.py  orders.py  owner.py  payment_gateway_api.py  payments.py  payments_v2.py  products.py  profile.py  promotions.py  reports.py  reviews.py  search.py  shipping.py  store_locator.py  stores.py  tasks.py  voice.py  websocket.py
apps/api-server/src/api_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api-server/src/db/: __init__.py  admin_importer.py  osm_importer.py  postgis.py
apps/api-server/src/middleware/: __init__.py  auth_middleware.py  body_size.py  csrf.py  error_handler.py  logging_middleware.py  rate_limit_per_user.py  rate_limiter.py  security_headers.py  validation.py
apps/api-server/src/models/: __init__.py  chat.py  favorite.py  order.py  payment.py  promotion.py  report.py  review.py  store.py  store_match.py  user.py
apps/api-server/src/services/: advanced_search.py  audit_logger.py  ecc.py  email_service.py  firebase.py  geo.py  geo_cache.py  geo_decorators.py  geo_memory.py  geo_search.py  geo_service.py  geo_sqlite_cache.py  key_rotation.py  llm.py  momo_gateway.py  notifications.py  openmap.py  payment_base.py  payment_factory.py  payment_gateway.py  prometheus_metrics.py  rag_search.py  serpapi.py  store_locator.py  stripe.py  stripe_gateway.py  vnpay_gateway.py  voice.py  zalopay_gateway.py
apps/api-server/src/tasks/: __init__.py  (+3 more)
apps/api-server/tests/: __init__.py  conftest.py  test_api_integration.py  test_auth.py  test_celery.py  test_config.py  test_data_importers.py  test_ecc.py  test_geo.py  test_integration.py  test_middleware.py  test_middleware_simple.py  test_models.py  test_ollama.py  test_openmap.py  test_orders.py  test_pagination.py  test_postgis.py  test_search.py  test_serpapi.py  test_shopping_agent.py  test_store_locator.py  test_stores.py  test_utils.py
(+188 files in other folders)
