[project]
name = "api-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "numpy>=2.1.0",
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "pydantic-ai",
    "faster-whisper>=1.2.1",
    "firebase-admin",
    "celery[redis]",
    "sentry-sdk[fastapi]",
    "stripe",
    "googlesearch-python",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
