[project]
name = "api-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic[email]==2.9.0",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis==5.2.0",
    "python-multipart==0.0.27",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.0",
    "numpy==2.1.0",
    "sentence-transformers==3.3.0",
    "qdrant-client==1.12.0",
    "pillow==12.2.0",
    "python-dotenv==1.2.2",
    "cryptography==46.0.7",
    "pyjwt==2.8.0",
    "pydantic-ai==1.99.0",
    "faster-whisper==1.2.1",
    "firebase-admin==6.5.0",
    "celery[redis]==5.4.0",
    "sentry-sdk[fastapi]==2.13.0",
    "stripe==10.9.0",
    "googlesearch-python==1.2.5",
    "slowapi==0.1.9",
    "prometheus-client==0.21.0",
    "jinja2==3.1.4",
    "aiosqlite==0.20.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.28.0",
    "aiosqlite==0.20.0",
    "pytest-mock==3.14.0",
    "black==26.3.1",
    "ruff==0.6.0",
    "mypy==1.11.0",
    "bandit==1.7.9",
    "safety==3.2.0",
    "pip-audit==2.7.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing -v"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
